CSS programmation + fix margin collapse

--- a/css/style.css
+++ b/css/style.css
@@ -481,13 +481,8 @@ section {
     color: var(--color-primary);
 }
 
-.programmation__content__showcase2 {
-    margin-top: 30px;
-    max-height: 500px;
-}
-
 .programmation__content__showcase__item {
-    width: 300px!important;
+    width: 350px!important;
     aspect-ratio: 1 / 1.41;
     border: 1px solid var(--color-tertiary);
     border-radius: var(--outer-border-radius);
@@ -500,9 +495,9 @@ section {
 }
 
 .swiper {
-    width: 100vw;
+    width: 100%;
     height: 100%;
-    left: -150px;
+    margin: var(--general-margin) auto;
 }
 
 .swiper-slide {
